# girona500_inspection_trayectories

./: CMakeLists.txt
cfg/: InspectionController.cfg
config/: controller.yaml  net_inspection.yaml  plane_inspection.yaml
launch/: plane_inspection.launch
scripts/: plane_inspection_node.py
